--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t docker-kub -f Dockerfile .
+  - docker build -t docker-kub -f Dockerfile.dev .
 
 script:
   - docker run docker-kub npm run test -- --coverage
